# PE-AV

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: pe_av_base.yaml  pe_av_large.yaml  pe_av_small.yaml
docs/: ARCHITECTURE.md  CONCEPTS.md
examples/: quickstart.py
scripts/: extract_embeddings.py  retrieval_demo.py  train.py
src/pe_av/: __init__.py  cli.py  config.py
src/pe_av/data/: __init__.py  dataset.py  tokenizer.py  transforms.py
src/pe_av/losses/: __init__.py  contrastive.py
src/pe_av/modeling/: __init__.py  audio_encoder.py  common.py  frame_encoder.py  fusion_encoder.py  pe_av.py  text_encoder.py  video_encoder.py
src/pe_av/retrieval/: __init__.py  index.py
src/pe_av/training/: __init__.py  trainer.py
tests/: test_config.py  test_encoders.py  test_end_to_end.py  test_losses.py  test_model.py  test_retrieval.py
