[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pe-av"
version = "0.1.0"
description = "A from-scratch, educational reimplementation of Meta AI's Perception Encoder Audiovisual (PE-AV): a contrastive audio-video-text encoder for large-scale multimodal retrieval."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Abhishek Mittal" }]
keywords = [
    "perception-encoder",
    "audiovisual",
    "contrastive-learning",
    "multimodal-retrieval",
    "clip",
    "audio",
    "video",
    "representation-learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/aabhimittal/pe-av"
Paper = "https://arxiv.org/abs/2512.19687"

[project.scripts]
pe-av-train = "pe_av.cli:train_main"
pe-av-retrieve = "pe_av.cli:retrieve_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B905"]
